Add content to home page Relates #3

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 2rem auto;
-  width: 70%;
+  width: 75%;
   padding: 0;
   color: #222;
   font-size: 14px;
@@ -52,6 +52,7 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 1.5rem;
 }
 .content-part {
   width: 30%;
@@ -66,6 +67,22 @@ body {
   margin-top: 0.2rem;
   font-size: 1rem;
 }
+.part-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.item-list {
+  font-size: 1rem;
+  margin-top: 0.2rem;
+}
+.project-link {
+  text-decoration: none;
+  color: #39C;
+}
+.skills {
+  font-weight: bold;
+}
 
 /*style for footer*/
 .footer {
@@ -79,4 +96,26 @@ body {
   font-size: 1rem;
   margin-left: 1rem;
   font-weight: bold;
+}
+
+/*style for smaller screens*/
+@media only screen and (max-width: 860px) and (min-width: 601px) {
+  .subtitle {
+    font-size: 1.5rem;
+  }
+  .content-part {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    width: 90%;
+  }
+  .subtitle {
+    font-size: 1rem;
+  }
+  .content-part {
+    width: 90%;
+  }
 }
