Add icons to footer Relates #6

--- a/style.css
+++ b/style.css
@@ -88,14 +88,19 @@ body {
 .footer {
   border-top: 0.1rem solid #000;
 }
-.footer-text {
-  color: #000;
-  margin-left: 0.5rem;
+.footer-text-icons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
 }
 .footer-item {
   font-size: 1rem;
   margin-left: 1rem;
   font-weight: bold;
+}
+.fa {
+  margin-left: 0.8rem;
+  font-size: 1.1rem;
 }
 
 /*style for smaller screens*/
