--- a/style.css
+++ b/style.css
@@ -101,6 +101,14 @@ body {
 .fa {
   margin-left: 0.8rem;
   font-size: 1.1rem;
+  color: #000;
+  cursor: pointer;
+}
+.fa:hover {
+  color: #39C;
+}
+.fa:visited {
+  color: #000;
 }
 
 /*style for smaller screens*/
