--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body {
 }
 .menu-list {
   padding: 1rem;
-  list-style-type: decimal;
 }
 .list-item {
   display: inline;
@@ -37,6 +36,7 @@ body {
   color: #222;
   margin: 0.3rem;
   padding: 0.3rem;
+  cursor: pointer;
 }
 .current {
   color: #39C;
@@ -127,8 +127,38 @@ body {
   }
   .subtitle {
     font-size: 1rem;
+    width: 80%;
+    margin-left: 2rem;
   }
   .content-part {
     width: 90%;
+  }
+  .navbar {
+    border-top: 0.1rem solid #ccc;
+    border-bottom: 0.1rem solid #ccc;
+  }
+  .header {
+    display: inline;
+  }
+  .menu-list {
+    width: 70%;
+    display: block;
+    margin: 0.6rem auto;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .footer-text-icons {
+    display: block;
+    width: 80%;
+    text-align: center;
+    margin: 1rem auto;
+  }
+  .footer-icons {
+    margin-top: 1rem;
+  }
+  .footer-item {
+    font-size: 0.8rem;
+    margin-left: 0.5rem;
   }
 }
